--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
     "version": "1.0",
     "description": "A Chrome extension chatbot for cybersecurity questions, connected to an Ollama server hosted on Azure.",
     "permissions": [ "identity", "storage" ],
-    "host_permissions": [ "https://your-azure-server.com/*" ],
+    "host_permissions": ["http://4.206.136.159:8000/*"],
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "icon.png",
-            "48": "icon.png",
-            "128": "icon.png"
+            "16": "example16.png",
+            "48": "example48.png",
+            "128": "example128.png"
         }
     },
     "background": {
